# splunk-gate

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/splunk_gate/: __init__.py  handler.py
